Mon Aug 24 02:36:53 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkarg.h:
	* gtk/gtkarg.c:
	* gtk/gtkwidget.h: 
	* gtk/gtkwidget.c: 
	* gtk/gtkobject.h:
	* gtk/gtkobject.c:
	* gtk/gtkcontainer.h: 
	* gtk/gtkcontainer.c: 
	(gtk_object_new):
	(gtk_object_set):
	(gtk_widget_new):
	(gtk_widget_set): 
	(gtk_container_add_with_args):
	(gtk_container_child_set):
	begin the parameter elipsis (...) after the first argument name. this
	change is source compatible, since it was always required, even as NULL.
 	(gtk_args_collect): 
	(gtk_object_args_collect): 
	(gtk_container_child_args_collect):
 	changed prototypes to pass first_arg_name, also, pass va_list variable
	by value (portability concerns). callers changed.

	* gtk/gtkargcollector.c: implemented gtk_arg_collect_value() as
	a huge macro GTK_ARG_COLLECT_VALUE() <shrug>. this is needed because we
 	can't pass va_list variables by reference for portability reasons.

Fri Aug 21 22:40:00  Raph Levien  <raph@gtk.org>

	* gdk/gdkrgb.c: added calls to gdk_rgb_init in the get_cmap and
	get_visual calls, so that it gets implicitly initialized.

Fri Aug 21 13:06:04 1998  Stuart Parmenter  <pavlov@gimp.org>
	* gtk/gtkfeatures.h.in:  added GTK_HAVE_FEATURES_1_1_2 for changes
	such as GtkCTree function name changes
	
Fri Aug 21 02:31:26 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.h:
	* gtk/gtkmain.c (gtk_check_version): added a function to perform a
	binary version check, returning a static string for error descriptions,
	or NULL on success.

Thu Aug 20 20:08:15 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktext.c ([un]draw_cursor): Check to see if we've
	computed our geometry yet, and if not, ignore the request.

	* gtk/gtktext.c (correct_cache_insert): Fiddled around
	some more. All the bug-test codes seem to work at once
	now. (fingers crossed...)

Thu Aug 20 13:04:08 PDT 1998 Manish Singh <yosh@gimp.org>

	* gdk/gdkrgb.c: silly visual fixes

	* gtk/testgtk.c: call gdk_rgb_init so color preview test actually
	works
